--- a/recipes/rib-eye.html
+++ b/recipes/rib-eye.html
@@ -6,5 +6,26 @@
 </head>
 <body>
     <h1>Air Fryer Rib-Eye Steak</h1>
+    <img src="../images/rib-eye.jpg" alt="Juicy rib-eye steak" height="310">
+
+    <h2>Description</h2>
+    <p>It's so easy to air-fry steaks in your air fryer. These definitely rival a steak cooked on the grill. You can marinate the rib-eyes in the morning before you leave for work, then cook them at night.</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 rib-eye steaks, cut 1 1/2- inch thick</li>
+        <li>½ cup reduced-sodium soy sauce</li>
+        <li>¼ cup olive oil</li>
+        <li>4 teaspoons grill seasoning</li>
+    </ul>
+
+    <h3>Directions</h3>
+    <ol>
+        <li>Combine steaks, soy sauce, olive oil, and seasoning in a large resealable bag. Marinate meat for at least 2 hours.</li>
+        <li>Remove steaks from the bag and discard marinade. Pat excess oil off steaks.</li>
+        <li>Add about 1 tablespoon water to the bottom of the air fryer pan to prevent it from smoking during cooking. Preheat the air fryer to 400 degrees F (200 degrees C).</li>
+        <li>Cook steaks in the preheated air fryer for 7 minutes, flip, and cook about 7 minutes more for medium-rare. For a medium, cook 8 minutes per side.</li>
+        <li>Let steaks sit for about 5 minutes before serving.</li>
+    </ol>
 </body>
 </html>
