Add second recipe

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/rib-eye.html">Rib-Eye Steak</a>
+    <ol>
+        <li><a href="recipes/rib-eye.html">Rib-Eye Steak</a></li>
+        <li><a href="recipes/potato-wedges.html">Potato Wedges</a></li>
+    </ol>
+    
 </body>
 
 </html>
