--- a/recipes/rib-eye.html
+++ b/recipes/rib-eye.html
@@ -27,5 +27,7 @@
         <li>Cook steaks in the preheated air fryer for 7 minutes, flip, and cook about 7 minutes more for medium-rare. For a medium, cook 8 minutes per side.</li>
         <li>Let steaks sit for about 5 minutes before serving.</li>
     </ol>
+
+    <a href="../index.html">Back to main</a>
 </body>
 </html>
