Add third recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ol>
         <li><a href="recipes/rib-eye.html">Rib-Eye Steak</a></li>
         <li><a href="recipes/potato-wedges.html">Potato Wedges</a></li>
+        <li><a href="recipes/ranch-pork-chops.html">Ranch Pork Chops</a></li>
     </ol>
     
 </body>
